; ModuleID = '/home/carl/AnghaBench/linux/fs/btrfs/extr_raid56.c_rbio_qstripe_page.c'
source_filename = "/home/carl/AnghaBench/linux/fs/btrfs/extr_raid56.c_rbio_qstripe_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.page = type { i32 }
%struct.btrfs_raid_bio = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.page* (%struct.btrfs_raid_bio*, i32)* @rbio_qstripe_page to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.page* @rbio_qstripe_page(%struct.btrfs_raid_bio* %0, i32 %1) #0 {
  %3 = alloca %struct.page*, align 8
  %4 = alloca %struct.btrfs_raid_bio*, align 8
  %5 = alloca i32, align 4
  store %struct.btrfs_raid_bio* %0, %struct.btrfs_raid_bio** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.btrfs_raid_bio*, %struct.btrfs_raid_bio** %4, align 8
  %7 = getelementptr inbounds %struct.btrfs_raid_bio, %struct.btrfs_raid_bio* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = add nsw i64 %8, 1
  %10 = load %struct.btrfs_raid_bio*, %struct.btrfs_raid_bio** %4, align 8
  %11 = getelementptr inbounds %struct.btrfs_raid_bio, %struct.btrfs_raid_bio* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = icmp eq i64 %9, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  store %struct.page* null, %struct.page** %3, align 8
  br label %23

15:                                               ; preds = %2
  %16 = load %struct.btrfs_raid_bio*, %struct.btrfs_raid_bio** %4, align 8
  %17 = load %struct.btrfs_raid_bio*, %struct.btrfs_raid_bio** %4, align 8
  %18 = getelementptr inbounds %struct.btrfs_raid_bio, %struct.btrfs_raid_bio* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = add nsw i64 %19, 1
  %21 = load i32, i32* %5, align 4
  %22 = call %struct.page* @rbio_stripe_page(%struct.btrfs_raid_bio* %16, i64 %20, i32 %21)
  store %struct.page* %22, %struct.page** %3, align 8
  br label %23

23:                                               ; preds = %15, %14
  %24 = load %struct.page*, %struct.page** %3, align 8
  ret %struct.page* %24
}

declare dso_local %struct.page* @rbio_stripe_page(%struct.btrfs_raid_bio*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
